# Modeling_RoboBall_with_Drake

./: LICENSE  README.md  run_compare_friction_models.py  run_compare_steer_models.py
roboball_plant/: README.md  ballParams.py  create_ball_plant.py  joint_modifiers.py
roboball_plant/RoboBall_URDF/: README.md  package.xml
roboball_plant/RoboBall_URDF/urdf/: RoboBall_URDF.urdf  RoboBall_URDF_lumpy.urdf
roboball_plant/data/: data2-conv.csv  dynamic_data.csv  full_ball_uncontrolled_response.csv  steering_static_stand_response.csv
utilities/: compare_models.py
